--- a/HomeTaskL15/pom.xml
+++ b/HomeTaskL15/pom.xml
@@ -14,7 +14,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.target>17</maven.compiler.target>
     <maven.compiler.source>17</maven.compiler.source>
-    <suit>testNg.xml</suit>
+    <suite>testNg.xml</suite>
   </properties>
 
   <dependencies>
