--- a/HomeTask19Elements/pom.xml
+++ b/HomeTask19Elements/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.example</groupId>
-  <artifactId>UI-2</artifactId>
+  <artifactId>HomeTask19Elements</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>UI-2</name>
+  <name>HomeTask19Elements</name>
   <url>http://maven.apache.org</url>
 
   <properties>
