WordPress Admin: Logging and reporting added for WPPageUsersMenu01Test

--- a/WPAdmin/src/main/resources/project.properties
+++ b/WPAdmin/src/main/resources/project.properties
@@ -1,2 +1,3 @@
 browser=CHROME
 baseUrl=https://test-automation-epc6e4eqgsgdhged.eastus2-01.azurewebsites.net/wp-admin/
+screenshotFolder=screenshots
