WordPress Admin: Listener on failed tests was added, one api test, some issues were fixed

--- a/WPAdmin/src/main/resources/project.properties
+++ b/WPAdmin/src/main/resources/project.properties
@@ -1,3 +1,4 @@
 browser=CHROME
 baseUrl=https://test-automation-epc6e4eqgsgdhged.eastus2-01.azurewebsites.net/wp-admin/
 screenshotFolder=screenshots
+remoteWebDriverUrl=http://192.168.0.104:4444/wd/hub
