WordPress Admin: added readme file, created general method for taking screenshots, created separate class for api, fixed some issues

--- a/WPAdmin/pom.xml
+++ b/WPAdmin/pom.xml
@@ -104,6 +104,7 @@
 <!--                    <suiteXmlFiles>-->
 <!--                        <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>-->
 <!--                    </suiteXmlFiles>-->
+                    <groups>${groupName}</groups>
                     <systemPropertyVariables>
                         <groupName>${groupName}</groupName>
                     </systemPropertyVariables>
